Restrict the maximum character length of the textField on NewDesign View to 20.

--- a/Diseno/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Diseno/View/Storyboard/Base.lproj/Main.storyboard
@@ -1666,6 +1666,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ibG-RQ-dMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="838" y="228"/>
         </scene>
     </scenes>
     <resources>
