--- a/Diseno/View/PortfolioCollectionViewCell.xib
+++ b/Diseno/View/PortfolioCollectionViewCell.xib
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PortfolioCollectionViewCell" customModule="Project2" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PortfolioCollectionViewCell" customModule="Diseno" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="172" height="203"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -48,6 +46,7 @@
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Hzq-Ex-zz7" secondAttribute="trailing" id="7dW-6f-1jL"/>
                 <constraint firstItem="CbD-m6-HK4" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="8XS-H2-zub"/>
@@ -59,11 +58,10 @@
                 <constraint firstItem="6iR-Rd-W0Z" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="qmx-3d-m4m"/>
                 <constraint firstAttribute="trailing" secondItem="6iR-Rd-W0Z" secondAttribute="trailing" constant="10" id="r4S-Oh-qdY"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="172" height="222"/>
             <connections>
                 <outlet property="designNameLabel" destination="CbD-m6-HK4" id="yzV-ql-6Ms"/>
-                <outlet property="designView" destination="Hzq-Ex-zz7" id="xzE-yh-mn8"/>
+                <outlet property="designView" destination="Hzq-Ex-zz7" id="zug-ap-Qrj"/>
                 <outlet property="showMoreButton" destination="6iR-Rd-W0Z" id="Ahw-nm-Djp"/>
             </connections>
             <point key="canvasLocation" x="235.19999999999999" y="221.28935532233885"/>
