--- a/Diseno/View/PortfolioCollectionViewCell.xib
+++ b/Diseno/View/PortfolioCollectionViewCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,12 +18,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="172" height="203"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hzq-Ex-zz7">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VPZ-yT-y3c">
                         <rect key="frame" x="0.0" y="0.0" width="172" height="172"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hzq-Ex-zz7">
+                                <rect key="frame" x="0.0" y="0.0" width="172" height="172"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Hzq-Ex-zz7" secondAttribute="height" multiplier="1:1" id="H8Z-sM-eBm"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Hzq-Ex-zz7" secondAttribute="height" multiplier="1:1" id="H8Z-sM-eBm"/>
+                            <constraint firstItem="Hzq-Ex-zz7" firstAttribute="top" secondItem="VPZ-yT-y3c" secondAttribute="top" id="5tb-EN-LYX"/>
+                            <constraint firstItem="Hzq-Ex-zz7" firstAttribute="leading" secondItem="VPZ-yT-y3c" secondAttribute="leading" id="eOa-Lk-ke5"/>
+                            <constraint firstAttribute="trailing" secondItem="Hzq-Ex-zz7" secondAttribute="trailing" id="fbW-s2-rUa"/>
+                            <constraint firstAttribute="bottom" secondItem="Hzq-Ex-zz7" secondAttribute="bottom" id="nw2-Le-hfQ"/>
                         </constraints>
-                    </imageView>
+                    </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6iR-Rd-W0Z">
                         <rect key="frame" x="137" y="10" width="25" height="25"/>
                         <color key="backgroundColor" white="0.33333333329999998" alpha="0.73825449486301364" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -45,12 +58,12 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Hzq-Ex-zz7" secondAttribute="trailing" id="7dW-6f-1jL"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="VPZ-yT-y3c" secondAttribute="trailing" id="2OP-Gd-970"/>
                 <constraint firstItem="CbD-m6-HK4" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="8XS-H2-zub"/>
-                <constraint firstItem="Hzq-Ex-zz7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="GaX-sG-8Nj"/>
+                <constraint firstItem="VPZ-yT-y3c" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" id="I1c-rg-dPX"/>
+                <constraint firstItem="VPZ-yT-y3c" firstAttribute="top" secondItem="ZTg-uK-7eu" secondAttribute="top" id="Lhv-AV-86c"/>
                 <constraint firstAttribute="trailing" secondItem="CbD-m6-HK4" secondAttribute="trailing" id="Q0w-F7-4dV"/>
-                <constraint firstItem="CbD-m6-HK4" firstAttribute="top" secondItem="Hzq-Ex-zz7" secondAttribute="bottom" constant="10" id="Tad-bp-rtX"/>
-                <constraint firstItem="Hzq-Ex-zz7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="eGK-iY-oZh"/>
+                <constraint firstItem="CbD-m6-HK4" firstAttribute="top" secondItem="VPZ-yT-y3c" secondAttribute="bottom" constant="10" id="Ws4-se-5qE"/>
                 <constraint firstAttribute="bottom" secondItem="CbD-m6-HK4" secondAttribute="bottom" id="qYq-0h-ihd"/>
                 <constraint firstItem="6iR-Rd-W0Z" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="qmx-3d-m4m"/>
                 <constraint firstAttribute="trailing" secondItem="6iR-Rd-W0Z" secondAttribute="trailing" constant="10" id="r4S-Oh-qdY"/>
@@ -59,6 +72,7 @@
             <connections>
                 <outlet property="designNameLabel" destination="CbD-m6-HK4" id="yzV-ql-6Ms"/>
                 <outlet property="designView" destination="Hzq-Ex-zz7" id="zug-ap-Qrj"/>
+                <outlet property="shadowView" destination="VPZ-yT-y3c" id="i2B-dU-I5W"/>
                 <outlet property="showMoreButton" destination="6iR-Rd-W0Z" id="Ahw-nm-Djp"/>
             </connections>
             <point key="canvasLocation" x="235.19999999999999" y="221.28935532233885"/>
@@ -66,5 +80,8 @@
     </objects>
     <resources>
         <image name="Icon_show_more" width="42.5" height="42.5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
